# percept_core

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.old  README.md  env.sh  notes.md  package.xml  requirements.txt  setup.bash  setup.py  setup.sh  setup.txt
assets/benchmark_scenes/: bookshelf.yaml  concave1.yaml  generated_scenario.yaml  hole_in_the_wall.yaml  hole_in_the_wall_medium.yaml  indoor_cluttered.yaml  maze_2d.yaml  obstacles_10.yaml
assets/coppelia_scenes/: tight_living_room.ttt
assets/robots/franka_panda/: panda.urdf  panda_ros2.urdf
config/: hole_in_the_wall.yaml  hole_in_the_wall_hard.yaml  obstacles1.yaml  obstacles2.yaml  obstacles3.yaml  perception.rviz  perception_full.rviz  perception_pipeline_setup.yaml  planning.rviz  random_points_2d.yaml  rs_pipeline_conf.yaml  rs_settings.yaml  rs_static_cams.yaml  sim_conf.yaml  sim_pipeline_conf.yaml  single_obstacle.yaml  static_agents_setup.yaml  static_cameras_setup.yaml
include/percept/: ArtificialPotentialField.h  GoalHeuristicCircForce.h  GoalObstacleHeuristicCircForce.h  NavigationFunctionForce.h  NearestNeighbour.h  NearestObstacleDistance.h  ObstacleDistanceCost.h  ObstacleHeuristicCircForce.h  RandomHeuristicCircForce.h  VelocityHeuristicCircForce.h  cuda_vector_ops.cuh  fields_computer.hpp  fields_computer_cpu.hpp
launch/: launch_manipulator_static_scene.py  launch_perception_headless.py  rs_bag_stream.launch  rs_multi.launch  rs_static.py  rs_static_full.py  sim_static.launch  sim_static.py  static_scene_with_fields.py  test_fields_computer.py
notes/: notes.md  topics_and_structs.md
notes/isaac_sim/: gui.sh  isaac.sh
percept/notebooks/tutorial/: PerAct_Tutorial.ipynb  README.md  Voxel_implementation.ipynb  setup.bash
prototypes/: kernel_script.py  occupancy_heuristic.ipynb
rviz2/: perception.rviz  perception_full.rviz  planning.rviz  planning2.rviz
scripts/: pmaf.sh
src/: CMakeLists.txt  fields_computer.cpp  fields_computer_cpu.cpp  obs_to_voxel.py  perception_node.py  perception_pipeline.py  read_obs.ipynb  real_pipeline.py  scene_creator.py  scene_loader.py  service_tester.py  sim_pipeline.py  sim_stream.py
src/fields/: ArtificialPotentialField.cu  ArtificialPotentialField.h  CMakeLists.txt  GoalHeuristic.cu  GoalHeuristicCircForce.h  GoalObstacleHeuristic.cu  GoalObstacleHeuristicCircForce.h  MinObstacleDistance.cu  NavigationFunctionForce.cu  NavigationFunctionForce.h  NearestNeighbor.cu  NearestNeighbour.cu  ObstacleDistanceCost.cu  ObstacleDistanceCost.h  ObstacleHeuristic.cu  ObstacleHeuristicCircForce.h  RandomHeuristic.cu  RandomHeuristicCircForce.cu  VFEngine.cpp  VFEngine.hpp  VFEngineCPU.cpp  VFEngineCPU.hpp  VelocityHeuristic.cu  VelocityHeuristicCircForce.cu  cuda_vector_ops.cuh
src/fields/unused/: GoalHeuristicCircForce.cu  GoalObstacleHeuristicCircForce.cu  NearestNeighbour.h  ObstacleHeuristicCircForce.cu  RandomHeuristicCircForce.h  VelocityHeuristicCircForce.h
src/filters/: temporal_filter_ema.py  temporal_filter_median.py
src/kernels/: ArtificialPotentialField.cu  GoalHeuristicCircForce.cu  GoalObstacleHeuristicCircForce.cu  NavigationFunctionForce.cu  NearestNeighbour.cu  NearestObstacleDistance.cu  ObstacleDistanceCost.cu  ObstacleHeuristicCircForce.cu  RandomHeuristicCircForce.cu  VelocityHeuristicCircForce.cu  radial.py
src/percept/: CMakeLists.txt  package.xml
src/percept/config/: agent_conf.yaml  cameras.yaml  perception.rviz  pipeline.yaml  rs_static_cams.yaml  sim_conf.yaml  static_cameras.yaml
src/percept/launch/: rs_bag_stream.launch  rs_static.launch  rs_static_full.py  rs_stream.launch  sim_static.launch  static.launch  test_fields_computer.py  test_service.py
src/percept/rviz/: perception.rviz  sim.rviz
src/percept/src/: cph_visualizer.py  fields_computer.cpp  perception_node.py  perception_pipeline.py  real_pipeline.py  real_time_pipeline.py  service_tester.py  sim_pipeline.py  sim_stream.py
src/percept_interfaces/: CMakeLists.txt  package.xml
src/percept_interfaces/srv/: AgentStateToCircForce.srv  PoseToVector.srv  PosesToVectors.srv
src/perception/: CMakeLists.txt  Configs.hpp  Mailbox.hpp  Perception.cpp  Perception.hpp  Pipeline.cpp  Pipeline.hpp  Pointcloud.hpp  PointsFK.cpp  PointsFK.hpp  Streamer.cpp  Streamer.hpp
src/perception/assets/: sphere_database-11.json  sphere_database-11.yaml  sphere_database-37.json  sphere_database-37.yaml  yaml_converter.py
src/perception/assets/panda/: panda.srdf  panda.urdf  smaller_panda_spherized.urdf
src/perception/realsense_examples/: Multicam.cpp  hello_world.cpp
src/perception/samples/: CMakeLists.txt
src/perception/samples/iceoryx/: CMakeLists.txt  PointCloud.hpp  Publisher.cpp  PublisherROS.cpp  Subscriber.cpp  SubscriberROS.cpp  SubscriberROSMailbox.cpp
src/perception/samples/open3d/: open3d_cuda_test.cu
src/perception/samples/pinnochio/: pinnochio_test.cpp
src/perception/samples/realsense_examples/: RealsenseFilters.cpp
src/pipeline/: 3cam_pipe.ipynb  3cam_pipe.py  develop.ipynb  mv_ws.ipynb  obst_pipe.ipynb
src/repos/peract/: requirements.txt
src/scenes/: dualarms_2cam.ttt  dualarms_3cam.ttt  test_scene_2cam.ttt  test_scene_reinforcement_learning_env.ttt
src/scripts/: 1cam_dataset_capture.py  2cam_dataset_capture.py  capture_dataset.py  pmaf.sh  run_capture_dataset.sh  run_datacap.sh  run_obs.sh  run_test.sh  test_rlbench.sh
src/scripts/dataset/: dualarms_2cam_datacap.py  dualarms_3cam_datacap.py
src/scripts/test/: get_fk.py  hello_world.py
src/simulation/perception_pipeline/: coppelia_dataset.ipynb  run_datacap.sh  run_test.sh
src/simulation/training/: control_arm_mj.py  (+3 more)
src/tests/: test_rlbench.sh  test_scene.py
src/tools/: CMakeLists.txt  dynamic_scene_loader.py  static_scene_loader.py
src/utils/: camera_helpers.py  config_helpers.py  ema_voxel_filter.py  fake_panda.py  fake_realsense.py  pose_helpers.py  static_tf_publisher.py  temporal_filter_majority.py  troubleshoot.py
src/voxels/: obs_with_fk.ipynb  rbs_with_fk.ipynb  read_obs_1cam.ipynb  redesign.ipynb  voxelize.py
tutorial/: Voxel_implementation.ipynb  setup.bash
(+37 files in other folders)
